# treecover-cd

./: .gitignore  main.py  pyproject.toml
data/labels/: sample_2000_2024.tif  sample_2000_2024_aligned.tif  sample_2000_2024_normalized.tif
src/: __init__.py  data.py  dataset.py  datasets.py  models.py
